<resources>
    <string name="app_name">Contacts Backup</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_have_already_account">I Have Already Account</string>
    <string name="enter_your_email_address1">Enter Your Email Address</string>
    <string name="enter_your_password1">Enter Your Password</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="log_in">Log in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="new_account_is_creating">New Account Is Creating</string>
    <string name="please_wait">Please Wait...</string>
    <string name="password_cannot_be_empty">Password can not be empty</string>
    <string name="email_cannot_be_empty">Email can not be empty</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="error">\"Error: \"</string>
    <string name="check_your_information">\"Check Your Information \"</string>
    <string name="permission_required">Permission required</string>
    <string name="give_permission">Give permission</string>
    <string name="email_cannot_be_empty2">Email can not be empty</string>
    <string name="password_cannot_be_empty2">Password can not be empty</string>
    <string name="logging_your_account">Logging Your Account</string>
    <string name="please_wait2">Please Wait</string>
    <string name="login_successful">Login Successful</string>
    <string name="error2">\"Error: \"</string>
    <string name="check_your_information2">\" Check Your Information\"</string>
    <string name="backup_contacts">Backup Contacts</string>
    <string name="show_contacts">Show Contacts</string>
    <string name="send_backup_file_to_email">Send Backup File to Email</string>
    <string name="bring_saved_contact_list">Bring Saved Contact List</string>
    <string name="show_saved_contacts">Show Saved Contacts</string>
    <string name="show_my_contacts">Show My Contacts</string>
    <string name="log_out">Log out</string>
    <string name="savedContact">You saved your contact list to Files as a VCard</string>
    <string name="send_verification_mail">Send Verification Mail</string>
    <string name="forgotPassword">Forgot My Password</string>
    <string name="savedConntact">You do not have any saved contacts</string>
</resources>