<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:scaleType="fitXY"
            android:src="@drawable/phone" />

        <EditText
            android:layout_marginTop="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_mail"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_img"
            android:background="@drawable/entered"
            android:hint="@string/enter_your_email_address"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            />

        <EditText
            android:layout_marginTop="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_mail"
            android:background="@drawable/entered"
            android:textColor="@android:color/white"
            android:hint="@string/enter_your_password"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:inputType="textPassword"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:drawableLeft="@drawable/ic_lock_open_black_24dp"
            />
        <TextView
            android:layout_marginTop="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_forgot_password"
            android:layout_centerHorizontal="true"
            android:textAlignment="textEnd"
            android:gravity="end"
            android:onClick="ForgotPassword"
            android:layout_below="@+id/login_password"
            android:text="@string/forgot_my_password"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"

            />
        <Button
            android:id="@+id/login_button"
            android:layout_below="@id/login_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="8dp"
            android:onClick="Login"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="@android:color/background_light"
            />
        <TextView
            android:layout_marginTop="24dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_new_account"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_below="@+id/login_button"
            android:onClick="SignIn"
            android:text="@string/create_new_account"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="8dp"

            />

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>